# Coffe_master

./: .env.example  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
prompts/: api_contracts.md  architecture.md  sim_model.md
src/espresso_mod/: api.py  config.py  main.py
src/espresso_mod/domain/: models.py  pid.py  shot_profiles.py
src/espresso_mod/hal/: base.py  rtd_max31865.py  sim.py
src/espresso_mod/services/: control.py  runtime.py  shot_runner.py  telemetry.py
src/espresso_mod/ui/: index.html
tests/: test_pid.py  test_shot_runner.py  test_sim_step.py  test_telemetry.py
