[project]
name = "espresso-mod"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
  "mypy>=1.10",
  "pre-commit>=3.7",
  "httpx>=0.27",
]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E","F","I","B","UP","SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_return_any = true
disallow_any_generics = true

[tool.pytest.ini_options]
testpaths = ["tests"]
